# app-xrp

./: .gitignore  CHANGELOG.md  Makefile  README.md  getPublicKey.py  ledger_app.toml  testTx.py
tests/: CMakeLists.txt  README.md  automation.json  conftest.py  functional_test.py  requirements.txt  setup.cfg  utils.py  xrp.py
tests/include/: bolos_target.h  cx.h  os.h  swap_lib_calls.h
tests/src/: cx.c  fuzz_tx.c  test_printers.c  test_swap.c  test_tx.c
tests/testcases/01-payment/: 01-basic.json  01-basic.raw  01-basic.txt  02-destination-tag.json  02-destination-tag.raw  02-destination-tag.txt  03-source-tag.json  03-source-tag.raw  03-source-tag.txt  04-both-tags.json  04-both-tags.raw  04-both-tags.txt  05-invoice-id.json  05-invoice-id.raw  05-invoice-id.txt  06-invoice-txn-ids-tags.json  06-invoice-txn-ids-tags.raw  06-invoice-txn-ids-tags.txt  07-issued-currency.json  07-issued-currency.raw  07-issued-currency.txt  08-issued-currency-max.json  08-issued-currency-max.raw  08-issued-currency-max.txt  09-issued-currency-min-partial.json  09-issued-currency-min-partial.raw  09-issued-currency-min-partial.txt  10-issued-currency-quality-partial.json  10-issued-currency-quality-partial.raw  10-issued-currency-quality-partial.txt  11-issued-currency-paths.json  11-issued-currency-paths.raw  11-issued-currency-paths.txt  12-issued-currency-conversion.json  12-issued-currency-conversion.raw  12-issued-currency-conversion.txt  13-issued-currency-e-notation.json  13-issued-currency-e-notation.raw  13-issued-currency-e-notation.txt  14-issued-currency-non-standard.json  (+17 more)
tests/testcases/02-set-regular-key/: 01-basic.json  01-basic.raw  01-basic.txt  02-delete.json  02-delete.raw  02-delete.txt  03-all-common-fields.json  03-all-common-fields.raw  03-all-common-fields.txt
tests/testcases/03-escrow-create/: 01-finish-after.json  01-finish-after.raw  01-finish-after.txt  02-cancel-after.json  02-cancel-after.raw  02-cancel-after.txt  03-both.json  03-both.raw  03-both.txt  04-both-condition.json  04-both-condition.raw  04-both-condition.txt  (+6 more)
(+364 files in other folders)
